<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:fillViewport="false"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
        <TextView
            style="@style/CapitalLabel"
            android:text="@string/toppings" />
        <CheckBox
            style="@style/FancyCheckbox"
            android:onClick="whippedClick"
            android:text="@string/whipped_cream" />
        <CheckBox
            style="@style/FancyCheckbox"
            android:onClick="chocolateClick"
            android:text="@string/chocolate" />
        <TextView
            style="@style/CapitalLabel"
            android:text="@string/quantity" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:onClick="decrement"/>
            <TextView
                android:id="@+id/quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="2" />
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:onClick="increment"/>
        </LinearLayout>
        <TextView
            style="@style/CapitalLabel"
            android:text="@string/order_summary" />
        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"
            android:text="$10" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:onClick="submitOrder"/>
    </LinearLayout>
</ScrollView>